--- a/exampleMemoryGame.html
+++ b/exampleMemoryGame.html
@@ -16,13 +16,13 @@
     <div class="large-12 columns">
         <div class="nav-bar right">
             <ul class="button-group">
-                <li><a href="#" class="button">Link 1</a></li>
-                <li><a href="#" class="button">Link 2</a></li>
-                <li><a href="#" class="button">Link 3</a></li>
-                <li><a href="#" class="button">Link 4</a></li>
+                <li><a href="#" class="button">thoughts</a></li>
+                <li><a href="#" class="button">games</a></li>
+                <li><a href="#" class="button">resources</a></li>
+                <li><a href="#" class="button">about</a></li>
             </ul>
         </div>
-        <h1>elBesto <small>This is my blog. It's awesome.</small></h1>
+        <h1>el-besto <small>a work in progress</small></h1>
         <hr/>
     </div>
 </div>
@@ -37,24 +37,21 @@
 
         <article>
 
-            <h3><a href="#">Memory Match Game, Example</a></h3>
-            <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
+            <h3 ><a id="memoryGame" href="http://www.developphp.com/view.php?tid=1393">Memory Match Game, Example</a></h3>
+            <h6>Written by <a href="http://www.youtube.com/watch?v=c_ohDPWmsM0">Adam Khoury</a> on August 12, 2012.</h6>
 
-            <div class="row">
-                <div class="large-12 columns">
-                    <div id="memory_board"></div>
-                </div>
-            </div>
-
-        </article>
-
-        <hr/>
-
-        <article>
-
-
+            <!--<div id="memoryGameBackground" class="large-8">-->
+                <div id="memory_board" class="large-9 columns"></div>
+            <!--</div>-->
+            <hr/>
+            <ul id = "gameControlDisplay" class="small-block-grid-2">
+                <!--<li><div id = "totalClickDisplay" class="button"></div></li>-->
+                <li><a href="#memoryGame" id="totalClickDisplay" class="button"></a></li>
+                <li><a href="#memoryGame" id="resetButton" class="button">Reset Game<br/>Board</a></li>
+            </ul>
 
         </article>
+
 
     </div>
 
@@ -95,14 +92,14 @@
         <hr/>
         <div class="row">
             <div class="large-6 columns">
-                <p>© Copyright no one at all. Go to town.</p>
+                <p>© Angelo Cisneros</p>
             </div>
             <div class="large-6 columns">
                 <ul class="inline-list right">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                    <li><a href="#">Link 4</a></li>
+                    <li><a href="#">thoughts</a></li>
+                    <li><a href="#">games</a></li>
+                    <li><a href="#">resources</a></li>
+                    <li><a href="#">about</a></li>
                 </ul>
             </div>
         </div>
