--- a/exampleMemoryGame.html
+++ b/exampleMemoryGame.html
@@ -32,17 +32,14 @@
 
 
 
-<div class="row">
-    <div class="large-9 columns" role="content">
+<div class="row"><!-- begin main content -->
+    <div class="large-9 columns" role="content"><!-- begin large-9 column -->
 
         <article>
 
             <h3 ><a id="memoryGame" href="http://www.developphp.com/view.php?tid=1393">Memory Match Game, Example</a></h3>
             <h6>Written by <a href="http://www.youtube.com/watch?v=c_ohDPWmsM0">Adam Khoury</a> on August 12, 2012.</h6>
-
-            <!--<div id="memoryGameBackground" class="large-8">-->
                 <div id="memory_board" class="large-9 columns"></div>
-            <!--</div>-->
             <hr/>
             <ul id = "gameControlDisplay" class="small-block-grid-2">
                 <!--<li><div id = "totalClickDisplay" class="button"></div></li>-->
@@ -52,15 +49,12 @@
 
         </article>
 
-
-    </div>
-
+    </div> <!-- end large-9 column -->
 
 
 
 
-
-    <aside class="large-3 columns">
+    <aside class="large-3 columns"> <!-- begin aside -->
 
         <h5>Categories</h5>
         <ul class="side-nav">
@@ -77,10 +71,10 @@
             <a href="#">Read More →</a>
         </div>
 
-    </aside>
+    </aside><!-- end aside -->
 
 
-</div>
+</div><!-- end Main Content -->
 
 
 
